force-app/main/default/objects/Desarrollo_o_Mejora2__c/Desarrollo_o_Mejora2__c.object-meta.xml
<CustomObject>
    <description>X</description>
    <label>Desarrollo o Mejora2</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Nombre de Desarrollo o Mejora</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desarollo o Mejora2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>