force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Area_ID__c.field-meta.xml
<CustomField>
    <fullName>Area_ID__c</fullName>
    <label>Area de I+D</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concretos</fullName>
            </value>
            <value>
                <fullName>Poliuretanos</fullName>
            </value>
            <value>
                <fullName>Pinturas y Selladores</fullName>
            </value>
            <value>
                <fullName>Epóxicos</fullName>
            </value>
            <value>
                <fullName>Asfalticos</fullName>
            </value>
            <value>
                <fullName>Resinas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>