force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Autor__c.field-meta.xml
<CustomField>
    <fullName>Autor__c</fullName>
    <inlineHelpText>Indique el autor del documento y la entidad a la que pertenecen los derechos</inlineHelpText>
    <label>Autor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>