force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Base_del_desarrollo__c.field-meta.xml
<CustomField>
    <fullName>Base_del_desarrollo__c</fullName>
    <label>Base del desarrollo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ELASTOMERICO</fullName>
            </value>
            <value>
                <fullName>CEMENTO</fullName>
            </value>
            <value>
                <fullName>PARAFINICO</fullName>
            </value>
            <value>
                <fullName>EPOXICO</fullName>
            </value>
            <value>
                <fullName>POLIURETANO</fullName>
            </value>
            <value>
                <fullName>ASFÁLTICO</fullName>
            </value>
            <value>
                <fullName>EMULSIONES</fullName>
            </value>
            <value>
                <fullName>OTRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>