force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Breve_Descripci_n__c.field-meta.xml
<CustomField>
    <fullName>Breve_Descripci_n__c</fullName>
    <inlineHelpText>Realice la descripción de lo relevante del documento.</inlineHelpText>
    <label>Breve Descripción</label>
    <type>TextArea</type>
</CustomField>