force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <inlineHelpText>Costo de materia prima que se toma como base para el requerimiento</inlineHelpText>
    <label>Cantidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>