force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Clasificaci_n_de_los_productos__c.field-meta.xml
<CustomField>
    <fullName>Clasificaci_n_de_los_productos__c</fullName>
    <label>Clasificación de los productos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DURADERO</fullName>
            </value>
            <value>
                <fullName>NO DURADERO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>