force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Cumple__c.field-meta.xml
<CustomField>
    <fullName>Cumple__c</fullName>
    <label>Cumple</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>