force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Existe_Muestra__c.field-meta.xml
<CustomField>
    <fullName>Existe_Muestra__c</fullName>
    <label>Existe Muestra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>