force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Fecha_de_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_solicitud__c</fullName>
    <label>Fecha de solicitud</label>
    <type>Date</type>
</CustomField>