force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Fecha_legal__c.field-meta.xml
<CustomField>
    <fullName>Fecha_legal__c</fullName>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>