force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Identificaci_n_de_la_muestra__c.field-meta.xml
<CustomField>
    <fullName>Identificaci_n_de_la_muestra__c</fullName>
    <inlineHelpText>Indica una codificación para la muestra.</inlineHelpText>
    <label>Identificación de la muestra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>