force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Identificaci_n_de_la_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Identificaci_n_de_la_Solicitud__c</fullName>
    <formula>IF(TEXT(  Tipo_de_Solicitud__c) =&quot;Desarrollo&quot;,&quot;D&quot;,IF(TEXT(  Tipo_de_Solicitud__c) =&quot;Mejora&quot;,&quot;M&quot;,&quot;&quot;))&amp;IF(TEXT( Area_ID__c )=&quot;Concretos&quot;,&quot;C&quot;,IF(TEXT(Area_ID__c )=&quot;Pinturas y Selladores&quot;,&quot;S&quot;,IF(TEXT(Area_ID__c )=&quot;Epóxicos&quot;,&quot;E&quot;,IF(TEXT(Area_ID__c )=&quot;Asfalticos&quot;,&quot;A&quot;,IF(TEXT(Area_ID__c )=&quot;Poliuretanos&quot;,&quot;P&quot;,IF(TEXT(Area_ID__c )=&quot;Resinas&quot;,&quot;R&quot;,&quot;&quot;))))))&amp;&quot;-&quot;&amp; Num_solicitud__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Identificación de la Solicitud</label>
    <type>Text</type>
</CustomField>