force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Innovaci_n_tecnol_gica__c.field-meta.xml
<CustomField>
    <fullName>Innovaci_n_tecnol_gica__c</fullName>
    <label>Innovación tecnológica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Se cuenta con la tecnología</fullName>
            </value>
            <value>
                <fullName>Se requiere de una adecuación a la tecnología instalada</fullName>
            </value>
            <value>
                <fullName>Se necesita desarrollar la tecnología</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>