force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Linea_IQ__c.field-meta.xml
<CustomField>
    <fullName>Linea_IQ__c</fullName>
    <label>Linea IQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IMPERQUIMIA</fullName>
            </value>
            <value>
                <fullName>ESPACIOS</fullName>
            </value>
            <value>
                <fullName>GUARDQUIM</fullName>
            </value>
            <value>
                <fullName>QUIMICRET</fullName>
            </value>
            <value>
                <fullName>SELLAQUIM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>