force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Naturaleza_Duraci_n_y_Complejidad__c.field-meta.xml
<CustomField>
    <fullName>Naturaleza_Duraci_n_y_Complejidad__c</fullName>
    <label>Naturaleza, Duración y Complejidad</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>