force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Necesidad_del_Desarrollo_o_Mejora__c.field-meta.xml
<CustomField>
    <fullName>Necesidad_del_Desarrollo_o_Mejora__c</fullName>
    <inlineHelpText>Describa en forma general como surge el desarrollo o mejora.</inlineHelpText>
    <label>Necesidad del Desarrollo o Mejora</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>