force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Nivel__c.field-meta.xml
<CustomField>
    <fullName>Nivel__c</fullName>
    <label>Nivel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAJO</fullName>
            </value>
            <value>
                <fullName>MEDIO</fullName>
            </value>
            <value>
                <fullName>ALTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>