force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Num_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Num_solicitud__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Num. solicitud</label>
    <type>AutoNumber</type>
</CustomField>