force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Otra__c.field-meta.xml
<CustomField>
    <fullName>Otra__c</fullName>
    <label>Otra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>