force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Otras__c.field-meta.xml
<CustomField>
    <fullName>Otras__c</fullName>
    <label>Otras</label>
    <length>255</length>
    <type>Text</type>
</CustomField>