force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Otro_legal__c.field-meta.xml
<CustomField>
    <fullName>Otro_legal__c</fullName>
    <label>Otro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>