force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Precio_de_referencia__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_referencia__c</fullName>
    <label>Precio de referencia</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>