force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Procedencia__c.field-meta.xml
<CustomField>
    <fullName>Procedencia__c</fullName>
    <inlineHelpText>Indique la procedencia del documento y la entidad a la que pertenecen los derechos</inlineHelpText>
    <label>Procedencia</label>
    <type>TextArea</type>
</CustomField>