force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Procedencia_muestra__c.field-meta.xml
<CustomField>
    <fullName>Procedencia_muestra__c</fullName>
    <inlineHelpText>Indique la procedencia de la muestra y la entidad a la que pertenecen los derchos</inlineHelpText>
    <label>Procedencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>