force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Requerido__c.field-meta.xml
<CustomField>
    <fullName>Requerido__c</fullName>
    <label>Requerido</label>
    <type>Date</type>
</CustomField>