force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Requerimientos_de_Desempe_o__c.field-meta.xml
<CustomField>
    <fullName>Requerimientos_de_Desempe_o__c</fullName>
    <inlineHelpText>Describa los requisitos de desempeño que debe cumplir el producto con respecto a su aplicación.</inlineHelpText>
    <label>Requerimientos de Desempeño</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>