force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Tipo_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_documento__c</fullName>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estudio de mercado</fullName>
            </value>
            <value>
                <fullName>Diagnóstico</fullName>
            </value>
            <value>
                <fullName>Encuesta</fullName>
            </value>
            <value>
                <fullName>Investigaciones</fullName>
            </value>
            <value>
                <fullName>Fichas técnicas</fullName>
            </value>
            <value>
                <fullName>Otras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>