force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Tipo_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Producto__c</fullName>
    <label>Tipo de Producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECONOMICO</fullName>
            </value>
            <value>
                <fullName>ESTANDAR</fullName>
            </value>
            <value>
                <fullName>PLUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>