force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Tipo_de_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Solicitud__c</fullName>
    <label>Tipo de Solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desarrollo</fullName>
            </value>
            <value>
                <fullName>Mejora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>