force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Versi_n__c.field-meta.xml
<CustomField>
    <fullName>Versi_n__c</fullName>
    <label>Versión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>