force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Viabilidad_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Viabilidad_Comercial__c</fullName>
    <inlineHelpText>Si cumple, describa por qué es viable comercialmente, si hay un mercado establecido, un proyecto, un pedido o una licitacion al que vaya dirigudo.

Si no cumple, justifique  si no hay una meta comercial o si este proyecto no traera mejoras en su comercialización</inlineHelpText>
    <label>Viabilidad Comercial</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>