force-app/main/default/objects/Desarrollo_o_Mejora2__c/fields/Viabilidad_T_cnica__c.field-meta.xml
<CustomField>
    <fullName>Viabilidad_T_cnica__c</fullName>
    <inlineHelpText>Si cumple, describa si se cuentan con los recursos técnicos y conocimientos para el desarrollo del proyecto.

Si no cumple, justifique el por que no es viable por asutos técnicos, sea por información, capacitación o tecnoligia de la empresa.</inlineHelpText>
    <label>Viabilidad Técnica</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>